cập nhật asset code
